Add What You Get section to features page and fix bullet spacing
- Added What You Get section with 3x2 grid layout to features page
- Configured 6 feature boxes with proper icons and descriptions
- Added 'View All Plans' button linking to products page
- Fixed bullet point spacing in home page pricing section
- Changed from newline_to_br approach to direct newline splitting
- Eliminated extra empty lines between feature bullets

--- a/sections/pricing.liquid
+++ b/sections/pricing.liquid
@@ -34,7 +34,8 @@
               </div>
 
               <ul class="plan-features">
-                {% assign features_list = product.description | newline_to_br | split: '<br />' %}
+                {% assign features_list = product.description | split: '
+' %}
                 {% for feature in features_list %}
                   {% if feature != blank %}
                     <li>{{ feature | strip }}</li>
@@ -65,7 +66,8 @@
               </div>
 
               <ul class="plan-features">
-                {% assign addon_features_list = addon_product.description | newline_to_br | split: '<br />' %}
+                {% assign addon_features_list = addon_product.description | split: '
+' %}
                 {% for feature in addon_features_list %}
                   {% if feature != blank %}
                     <li>{{ feature | strip }}</li>
