--- a/sections/what-you-get.liquid
+++ b/sections/what-you-get.liquid
@@ -284,14 +284,12 @@
     {
       "type": "text",
       "id": "button_text",
-      "label": "Button Text (optional)",
-      "default": ""
+      "label": "Button Text (optional)"
     },
     {
       "type": "url",
       "id": "button_link",
-      "label": "Button Link (optional)",
-      "default": ""
+      "label": "Button Link (optional)"
     }
   ],
   "blocks": [
