--- a/sections/what-you-get.liquid
+++ b/sections/what-you-get.liquid
@@ -218,7 +218,7 @@
     }
 
     .features-grid {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: 1fr;
       gap: 20px;
     }
 
