Add schema and JSON settings for contact form editable fields

--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -131,6 +131,31 @@
 {% schema %}
 {
   "name": "Contact Form",
-  "settings": []
+  "settings": [
+    {
+      "type": "text",
+      "id": "title",
+      "label": "Title",
+      "default": "Contact Market Sniper"
+    },
+    {
+      "type": "textarea",
+      "id": "subtitle",
+      "label": "Subtitle",
+      "default": "Have questions? We're here to help you succeed in your trading journey"
+    },
+    {
+      "type": "text",
+      "id": "success_message",
+      "label": "Success Message",
+      "default": "Thanks for contacting us! We'll get back to you as soon as possible."
+    },
+    {
+      "type": "text",
+      "id": "button_text",
+      "label": "Submit Button Text",
+      "default": "Send Message"
+    }
+  ]
 }
 {% endschema %}
